# GYSELA_utils

./: .gitignore  clean_all.sh  rml_all.sh  rml_rev.sh  smart_rsync.sh
post-processing/: pyproject.toml
post-processing/scripts/: IO_utilities.py  diagnostics_main.py  f2D_utilities.py  gysela_utilities.py  h5_reader_xr.py  input_reader.py  phi2D_analytical.py  phi2D_utilities.py  rprof_utilities.py
post-processing/scripts/IO_utilities/: IO_utilities.py
post-processing/scripts/diagnostics/: psd_mn0.py  rosenbluth_hinton_mn0_fluxdriven.py  rosenbluth_hinton_mn0_quiescent.py
post-processing/scripts/diagnostics_interface/: diagnostics_interface.py
post-processing/scripts/exploratory_notebooks/: GAM_phase_lag.ipynb  conservation_law_master_diagnostic.ipynb  f2D_rvpar.ipynb  f2D_vpar_animation.ipynb  f2D_vpar_batch_evolution.ipynb  f2D_vpar_evolution.ipynb  gam_growth_rate.ipynb  gam_phase_lag.ipynb  hovmoller_mn0.ipynb  kinetic_energy_conservation.ipynb  parameter_scan.ipynb  phi_mn_magnitude.ipynb  phi_rate_of_change.ipynb  phixy_mn0.ipynb  phixy_mn0_animation.ipynb  phixy_n0_animation.ipynb  potential_energy_conservation.ipynb  psd_mn0.ipynb  psd_n0.ipynb  radial_frequency_scan.ipynb  rosenbluth_hinton_batch_mn0.ipynb  rosenbluth_hinton_mn0.ipynb  rosenbluth_hinton_mn0_equilibrium_shift.ipynb  rosenbluth_hinton_mn0_fluxdriven.ipynb  saturation_test.ipynb  saturation_test_variance.ipynb  v_E_perp_radial_heat_flux.ipynb  v_E_perp_radial_particle_flux.ipynb
post-processing/scripts/gam_specialised/: damping.py
post-processing/scripts/h5_reader_xr/: h5_reader_xr.py
(+39 files in other folders)
